--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.ssb.rawdata.converter</groupId>
     <artifactId>rawdata-converter-app-csv</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
 
     <parent>
         <groupId>io.micronaut</groupId>
@@ -25,7 +25,7 @@
         <connection>scm:git:git://github.com/statisticsnorway/rawdata-converter-app-csv.git</connection>
         <developerConnection>scm:git:git@github.com:statisticsnorway/rawdata-converter-app-csv.git</developerConnection>
         <url>https://github.com/statisticsnorway/rawdata-converter-app-csv</url>
-      <tag>rawdata-converter-app-csv-0.0.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <repositories>
