--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>micronaut-test-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>no.ssb.rawdata.converter</groupId>
+            <artifactId>rawdata-converter-testutils</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
