--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>no.ssb.rawdata.converter.app</groupId>
         <artifactId>rawdata-converter-app-parent</artifactId>
-        <version>0.9.5</version>
+        <version>0.10.1-SNAPSHOT</version>
         <relativePath />
     </parent>
 
