--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>no.ssb.rawdata.converter.app</groupId>
         <artifactId>rawdata-converter-app-parent</artifactId>
-        <version>0.10.1-SNAPSHOT</version>
+        <version>0.10.6</version>
         <relativePath />
     </parent>
 
     <artifactId>rawdata-converter-app-csv</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Rawdata Converter App - CSV</name>
 
     <properties>
